quick-protobuf/tests/rust_protobuf/v3/test_deprecated_enum_compile_fail_script.stderr
error[E0599]: no variant or associated item named `C` found for enum `Thing` in the current scope
 --> tests/rust_protobuf/v3/test_deprecated_enum_compile_fail_script.rs:9:20
  |
9 |     let t = Thing::C;
  |                    ^
  |                    |
  |                    variant or associated item not found in `Thing`
  |                    help: there is a variant with a similar name: `A`
  |
 ::: tests/rust_protobuf/v3/./test_deprecated_enum_without_add_deprecated_fields.rs
  |
  | pub enum Thing {
  | -------------- variant or associated item `C` not found for this enum
